Update 데이터 타입에 따른 종류.md

--- a/Core Java Script/01/데이터 타입에 따른 종류.md
+++ b/Core Java Script/01/데이터 타입에 따른 종류.md
@@ -1,6 +1,6 @@
 ## 01 데이터 타입의 종류
 
-자바스크립트 데이터 타입 종류 
+#### 자바스크립트 데이터 타입 종류 
 
 1. 기본형 - 숫자(number), 문자열(string), 불리언(boolean), null, undifined 등
 - ES6에서는 심볼(symbol)이 추가됨 <br/><br/>
@@ -8,3 +8,9 @@
 2. 참조형 - 객체(object), 배열(Array), 함수(Function), 날짜(date), 정규표현식(RegExp) 등
 - ES6에서는 Map, WeakMap, Set, WeakSet등이 추가, 객체의 하위 분류에 속함 <br/><br/>
 ![image](https://github.com/whywwhy/JS-study/assets/120763503/6976627b-8ed6-467e-859c-f3eee6d9f8bd)
+
+#### 구분하는 기준 
+일반적으로 기본형은 할당, 연산 시 복제 / 참조형은 참조 
+but 기본형은 값이 담긴 주소값을 바로 복제 / 참조형 값이 담긴 주솟값들로 이루어진 묶음을 가르키는 주솟값을 복제 
+
+- 기본형 -> 불변성
