Update 02. 데이터 타입에 관한 배경지식.md

--- a/Core Java Script/01/02. 데이터 타입에 관한 배경지식.md
+++ b/Core Java Script/01/02. 데이터 타입에 관한 배경지식.md
@@ -1,1 +1,24 @@
+#### 메모리와 데이터 
+비트 - 0또는 1만 표현할 수 있는 하나의 메모리 조각
+메모리는 매우 많은 비트로 구성되어있음, 
+각 비트는 고유한 식별자를 통해 위치를 확인 할 수 있음. 
+-> 0과 1을 통해 식별하는 것은 비효율적 
 
+매우 많은 비트를 한 단위로 묶으면 검색 시간 감소, 표현 가능 데이터 증가
+but 낭비되는 비트 발생 
+-> 자주 사용 X 데이터 표현하기 위해 빈 공간 대신 표현 가능 개수에 어느 정도 제약 있더라도 적정한 공간 묶는 편 
+
+--> byte 라는 단위 발생 
+
+과거보다 메모리 용량 증가한 상황의 자바스크립트는 메모리 공간 넉넉하게 할당 
+숫자의 경우 정수형인지 부동소수형인지 구분하지 않고 64비트(8바이트)확보
+
+모든 데이터는 바이트 단위의 식별자, 정확히 **메모리 주솟값** 을 통해 서로 구분하고 연결 할 수 있다. 
+
+#### 식별자와 변수 
+1. 변수 - '변할 수 있는 수' 
+값이 반드시 **'숫자'**여야만 하는 것은 아님. 
+**'변할 수 있는 무언가'**라는 것의 의미 
+-> '무언가'란 **데이터**를 의미
+
+2. 식별자 - 어떤 데이터를 식별한는데 사용하는 이름, **'변수명'**
