--- a/Core Java Script/01/03. 변수 선언과 데이터 할당.md
+++ b/Core Java Script/01/03. 변수 선언과 데이터 할당.md
@@ -1,1 +1,26 @@
+## 변수 선언과 데이터 할당 
 
+#### 변수 선언
+```
+var a;
+```
+위 코드는 **'변할 수 있는 데이터를 만든다. 이데이터의 식별자는 a로 한다**로 풀이 가능. 
+변할 수 있는 데이터이니 선언할 때는 undefined이더라도 나중에 다른 값으로 바꾸면 됨. 
+
+변수는 결국 **'변경 가능한 데이터가 담길 수 있는 공간 또는 그릇**이라고 생각 할 수 있다.
+![image](https://github.com/whywwhy/JS-study/assets/120763503/de185bf5-111a-42e9-ad22-8553c6a8987c)
+- 변수 선언 과정
+-- 예제 1-1의 명령을 받은 컴퓨터는 메모리에서 빈 공간 하나 확보 (임의로 1003번으로 정함)
+- 공간의 이름(식별자) 지정: a
+-- 사용자가 a에 접근 시, 컴퓨터는 메모리에서 a라는 이름을 가진 주소를 검색 한 후, 해당 공간에 담긴 데이터를 반환한다.
+
+#### 데이터 할당 
+
+```
+var a; // 변수 a 선언 
+a = 'abc'; // 변수 a에 데이터 할당
+
+var a = 'abc'; //변수 선언과 할당을 한 문장에 표현
+```
+선언을 두 문장으로 나누든 한 문장으로 명령하든, 자바스크립트 엔진은 똑같은 동장 수행
+![image](https://github.com/whywwhy/JS-study/assets/120763503/3885afa1-06bb-40a4-947b-06fa0404e64b)
