Update 03. 변수 선언과 데이터 할당.md

--- a/Core Java Script/01/03. 변수 선언과 데이터 할당.md
+++ b/Core Java Script/01/03. 변수 선언과 데이터 할당.md
@@ -9,9 +9,9 @@ var a;
 
 변수는 결국 **'변경 가능한 데이터가 담길 수 있는 공간 또는 그릇**이라고 생각 할 수 있다.
 ![image](https://github.com/whywwhy/JS-study/assets/120763503/de185bf5-111a-42e9-ad22-8553c6a8987c)
-- 변수 선언 과정
+- 변수 선언 과정 <br/>
 -- 예제 1-1의 명령을 받은 컴퓨터는 메모리에서 빈 공간 하나 확보 (임의로 1003번으로 정함)
-- 공간의 이름(식별자) 지정: a
+- 공간의 이름(식별자) 지정: a <br/>
 -- 사용자가 a에 접근 시, 컴퓨터는 메모리에서 a라는 이름을 가진 주소를 검색 한 후, 해당 공간에 담긴 데이터를 반환한다.
 
 #### 데이터 할당 
