Update 03. 변수 선언과 데이터 할당.md

--- a/Core Java Script/01/03. 변수 선언과 데이터 할당.md
+++ b/Core Java Script/01/03. 변수 선언과 데이터 할당.md
@@ -24,3 +24,14 @@ var a = 'abc'; //변수 선언과 할당을 한 문장에 표현
 ```
 선언을 두 문장으로 나누든 한 문장으로 명령하든, 자바스크립트 엔진은 똑같은 동장 수행
 ![image](https://github.com/whywwhy/JS-study/assets/120763503/3885afa1-06bb-40a4-947b-06fa0404e64b)
+
+변수 영역에 값을 대입하지 않고 한 단계를 거치는 이유 
+-> 데이터 변환을 자유롭게 할 수 있고, 동시에 메모리를 더욱 효율적으로 관리 가능 
+
+if 미리 확보한 공간 내에서만 데이터 변환 할 수 있다면 변환한 데이터 다시 저장하기 위해서 '확보된 공간을 변환된 데이터 크기에 맞게 늘리는 작업'이 선행돼야 함. 
+해당 메모리 상 마지막이라면 문제 X -> 중간에 있다면 처리 연산 증가 
+
+효율적으로 문자열 데이터의 변환을 처리 하려면 변수와 데이터를 별도의 공간에 나눠 저장하는 것이 최적.
+
+![image](https://github.com/whywwhy/JS-study/assets/120763503/85c459d0-89fd-4d83-86c4-e3c1638c5d9b)
+
