Update 04. 기본형 데이터와 참조형 데이터.md

--- a/Core Java Script/01/04. 기본형 데이터와 참조형 데이터.md
+++ b/Core Java Script/01/04. 기본형 데이터와 참조형 데이터.md
@@ -69,3 +69,20 @@ obj1.a = 2;
 <hr/>
 
 ![](https://velog.velcdn.com/images/whywwhy/post/d45675cf-f9d3-4a1e-882f-cd06669a5144/image.png)
+
+이러한 경우를 중첩객체라 말함. 
+```
+var obj = {
+	x: 3,
+    arr: [3, 4, 5]
+};
+```
+1. 컴퓨터는 ㅇ선 변수 공간(@1002)확보, 주소 이름 obj로 지정 
+2. 임의 데이터 저장공간(@5001)에 데이터 지정 -> 여러개의 변수와 값들을 모아놓은 그룹(객체)임 
+프로퍼티를 저장하기 위해 별도의 변수 영역을 마련(@7103~?)를 @5001에 지정 
+3. @7103에 이름 x, @7104에 이름 arr 지정. 
+4. 데이터 영역에서 숫자 3 검색 -> 없음 -> @5002에 저장, 이 주소 @7103에 저장 
+5. @7104에 저장할 값 배열 
+프로퍼티들을 저장하기 위해 별도의 변수 영역을 마련(@8104~?)
+그 영역의 주소 정보(@8104~?)를 @5003에 저장 다음, @5003을 @7104에 저장 
+6. 배열의 요소가 총 3개이므로 3개의 변수공간을 확보, 각각의 인덱스 부여
