Update 04. 기본형 데이터와 참조형 데이터.md

--- a/Core Java Script/01/04. 기본형 데이터와 참조형 데이터.md
+++ b/Core Java Script/01/04. 기본형 데이터와 참조형 데이터.md
@@ -85,4 +85,48 @@ var obj = {
 5. @7104에 저장할 값 배열 
 프로퍼티들을 저장하기 위해 별도의 변수 영역을 마련(@8104~?)
 그 영역의 주소 정보(@8104~?)를 @5003에 저장 다음, @5003을 @7104에 저장 
-6. 배열의 요소가 총 3개이므로 3개의 변수공간을 확보, 각각의 인덱스 부여
+6. 배열의 요소가 총 3개이므로 3개의 변수공간을 확보, 각각의 인덱스 부여 
+7. 데이터 영역에서 숫자 3 검색(@5002) 그 주소를 @8104에 저장 
+8. 데이터 영역에 숫자 4 X -> @5004에 저장, 이 주소를 @8105저장 
+9. 데이터 영역에 숫자 5 X -> @5005에 저장, 이 주소를 @8106저장 
+
+<hr/>
+
+![](https://velog.velcdn.com/images/whywwhy/post/d64c99ee-d526-464c-8caa-ab84e530f67f/image.png)
+obj.arr[1] 검색하기 
+-> @5003의 참조카운트는 @7104에 @5003이 저장돼어 있는 시점까지는 1이었다가 @7104에 @5006이 저장되는 순간 0이 됨. 참조카운트가 0인 메모리 주소는 가비지 컬렉터의 수거 대상이 됨.
+
+#### 변수 복사 비교 
+```
+var a = 10;
+var b = a;
+
+var obj1 = {C: 10, d: 'ddd'};
+var obj2 = obj1;
+```
+![](https://velog.velcdn.com/images/whywwhy/post/212c789c-e309-4c6c-bae7-2195e8940de9/image.png)
+
+**변수 복사 이후 값 변경 결과 비교 - 객체 프로퍼티 변경**
+```
+var a = 10;
+var b = a;
+var obj1 = {c: 10, d: 'ddd'};
+var obj2 = obj1;
+
+b = 15;
+obj2.c = 20;
+```
+![](https://velog.velcdn.com/images/whywwhy/post/50c19d3d-6378-46ed-921f-c21f35327433/image.png)
+
+**변수 복사 이후 값 변경 결과 비교 - 객체 자체 변경**
+```
+var a = 10;
+var b = a;
+var obj1 = { c: 10, d: 'ddd' };
+var obj2 = obj1;
+
+b = 15;
+obj2 = { c: 20, d: 'ddd' };
+```
+![](https://velog.velcdn.com/images/whywwhy/post/8426043b-8cf1-4564-9def-d2ebb2b1c73b/image.png)
+ 
