--- a/Core Java Script/01/05. 불변객체.md
+++ b/Core Java Script/01/05. 불변객체.md
@@ -126,3 +126,20 @@ console.log(user.urls.portfolio === user2.urls.portfolio); //true
 user2.urls.blog = '';
 console.log(user.urls.blog === user2.urls.blog);		  //true
 ```
+
+**중첩된 객체에 대한 깊은 복사**
+```
+var user2 = copyObjcet(user);
+user2.urls = copuObject(user.urls);
+
+user.urls.portfolio = 'http://portfolio.com';
+consle.log(user.urls.portfolio === user2.urls.portfoliio); // false 
+
+user2.urls.blog = '';
+console.log(user.urls.blog === user2.urls.blog);		  // false
+```
+
+어떤 객체를 복사할 때 객체 내부의 모든 값을 복사해서 완전히 새로운 데이터를 만들고자 할 때, 
+객체의 프로퍼티 중에서 그 값이 **기본형 데이터일 경우에는 그대로 복사**
+**참조형 데이터는 다시 그 내부의 ㅍ로퍼티들을 복사**해야 함
+
