Update 06. undefined와 null.md

--- a/Core Java Script/01/06. undefined와 null.md
+++ b/Core Java Script/01/06. undefined와 null.md
@@ -1,1 +1,13 @@
+## 06. undefined와 null 
+#### undefined
+
+1. 값을 대입하지 않은변수, 즉, 데이터 영역의 메모리 주소를 지정하지 않은 식별자에 접근할 때
+2. 객체 내부의 존재하지 않는 프로퍼티에 접근하려고 할때
+3. return 문이 없거나 호출되지 않은 함수의 실행 결과.
+4. type of undefined는 undefined
+
+#### null
+
+1. 비어있음을 명시적으로 나타내고 싶을 때 사용.
+2. type of null은 object입니다.
 
