--- a/Core Java Script/02/03. LexicalEnvironment.md
+++ b/Core Java Script/02/03. LexicalEnvironment.md
@@ -1,1 +1,107 @@
+## 03. LexicalEnvironment
 
+#### environmentRecord와 호스팅 
+environmentRecord에는 현재 컨텍스트와 관련된 코드의 식별자 정보들이 저장 됨. 
+
+컨텍스트를 구성하는 함수에 지정된 매개변수 식별자, 선언한 함수가 있을 경우 그 함수 자체, var로 선언된 변수의 식별자 등이 식별자에 해당 됨. 
+
+컨텍스트 내부 전체를 처음부터 끝까지 훑으며 **순서대로** 수집 
+<hr/>
+
+호이스팅(hoisting) - 자바스크립트 엔진은 식별자들을 최상단으로 끌어올려놓은 다음 실제 코드를 실행 
+
+<hr/> 
+
+**호이스팅 규칙**
+environmentRecord에는 매개변수의 이름, 함수 선언, 변수명 등이 담김 
+```
+function a(X) { 
+	console.log(x); 
+    var x; 
+    console.log(x); 
+    var x = 2; 
+    console.log(x) 
+} 
+a(1)
+```
+
+**함수 선언문과 함수 표현식** 
+함수 선언식(function declaration)과 함수 표현식(function expression) 모두 함수를 새롭게 정의할 때 쓰이는 방식. 
+
+함수 선언문 - function 정의부만 존재하고 별도의 할당 명령이 없는 것을 의미 
+함수 표현식 - 정의한 function을 별도의 변수에 할당하는 것을 말함
+
+함수 선언문 - 반드시 함수명이 정의되어야 함 
+함수 표현식 - 없어도 됨 / '기명 함수 표현식', '익명 함수 표현식'
+
+```
+function a() { /*...*/} 	    //함수 선언문. 함수명 a가 곧 변수명. 
+a(); //실행 OK 
+
+var b = function() { /*...*/}   // (익명) 함수 표현식. 변수명 b가 곧 함수명.
+b(); //실행 OK 
+
+var c = function d() { /*...*/} //기명 함수 표현식. 변수명은 c, 함수명은 d
+c(); //실행 OK
+d(); //에러
+```
+<br/><br/>
+
+```
+console.log(sum(1, 2))
+console.log(multiply(3, 4)); 
+
+function sum(a, b){				//함수 선언문 sum
+	retrun a + b;
+}
+
+var multiply = function(a, b){	//함수 표현식 multiplu
+	return a*b; 
+}
+```
+
+**함수 선언문의 위험성**
+```
+console.log(sum(3, 4)); 
+
+function sum(x, y) {
+	return x + y; 
+}
+
+var a = sum(1, 2); 
+
+function sum(x, y) { 
+	retrun x + '+' + y + '=' + (x + y);
+}
+
+var c = sum(1, 2);
+console.log(c);
+```
+전역 컨텍스트가 활성화될 때 전역공간에 선언된 함수들이 모두 가장 위로 끌어올려짐 
+
+동일한 변수명에 서로 다른 값을 할당할 경우, 나중에 할당한 값이 먼저 할당한 값을 덮어씌움(override)
+-> 코드를 실행하는 중에 실제로 호출되는 함수는 오직 마지막에 할당한 함수, 즉 마지막의 선언된 함수 
+
+**상대적으로 함수 표현식이 안전함** 
+```
+console.log(sum(3, 4)); // Uncaught Type Error: sum is not a function
+
+var sum = function(x, y) {
+	return x + y; 
+};
+
+var a = sum(1, 2);
+
+...
+
+var sum = function(x, y){ 
+	return x+ '+' + y + '=' + (x, y);
+};
+
+...
+
+var c = sum(1, 2);
+console.log(c);
+```
+
+#### 스코프, 스코프 체인, outerEnvironmentReference
