--- a/Core Java Script/02/03. LexicalEnvironment.md
+++ b/Core Java Script/02/03. LexicalEnvironment.md
@@ -105,3 +105,41 @@ console.log(c);
 ```
 
 #### 스코프, 스코프 체인, outerEnvironmentReference
+스코프(scope)란 식별자에 대한 유효범위
+대부분의 언어제 존재하며 자바스크립트는 특이하게 전역공간을 제외하면 **오직 함수에 의해서만** 스코프가 생성됨 
+
+스코프 체인(scope chain)이란 식별자의 유효범위를 안에서 바깥까지 검색해나가는것 
+
+이를 가능케 하는것이 LexicalEnvironment의 두번째 수집자료 outerEnvironmentReference. 
+
+**스코프 체인**
+outerEnvironmentReference는 현재 호출된 함수가 선언될 당시의 LexicalEnvironment를 참조 
+
+과거시점인 '선언될 당시'에 '선언하다'라는 행위가 실제로 일어날 수 있는 시점이란 
+콜 스택 상에서 어떤 실행 컨텍스트가 활성화 된 상태일 때
+-> 어떤 함수를 선언(정의)하는 행위 자체가 하나의 코드에 지나지 않으며, 모든 코드는 실행 컨텍스트가 활성화 상태일 때 실행됨. 
+
+여러스코프에서 동일한 식별자를 선언한 경우에는 **무조건 스코프 체인 상에서 가장 먼저 발견된 식별자에만 접근 가능**
+```
+var a = 1; 
+var outer = function() { 
+	var inner = function() {
+    	console.log(a); 
+        var a = 3; 
+    };
+    inner(); 
+  	console.log(a); 
+};
+outer();
+console.log(a);
+```
+![](https://velog.velcdn.com/images/whywwhy/post/a54bbde3-b022-4b0e-a837-772042a9761a/image.png)
+
+**변수 은닉화**(variable shadowing) - 직접적으로 변경되면 안 되는 변수에 대한 접근을 막는 것 
+
+<hr/>
+
+**전역변수와 지역변수**
+지역변수 - outer 함수 내부에서 선언한 inner와 inner 함수 내부에서 선언한 a 
+전역변수 - 전역공간에서 선언한 변수. 함수 내부에서 선언한 변수는 무조건 지역변수 
+
