--- a/Core Java Script/03/01. 상황에 따라 달라지는 this.md
+++ b/Core Java Script/03/01. 상황에 따라 달라지는 this.md
@@ -1,1 +1,37 @@
 
+## 01. 상황에 따라 달라지는 this 
+this는 **함수를 호출할 때 결정됨** 
+-> 함수를 어떤 방식으로 호출하느냐에 따라 값이 달라지는 것 
+
+#### 전역 공간에서 this 
+- 전역 공간에서 this는 전역 객체를 가르킴. 
+개념상 전역 컨텍스트를 생성하는 주체가 전역 객체
+- 자바스크립트 런타임 환경에 따라 다른 이름과 정보를 가짐 
+
+```
+console.log(this);   // { alert: f(), atob: f(), blur: f(), bota: f(), ... } 
+console.log(window); // { alert: f(), atob: f(), blur: f(), bota: f(), ... } 
+console.log(this === window); // true
+```
+
+```
+console.log(this);   // { proecess: { title: 'node', version: 'v10.13.0' ... }
+console.log(global); //{ proecess: { title: 'node', version: 'v10.13.0' ... }
+console.log(this === global); // true
+```
+
+**자바 스크립트의 모든 변수는 실은 특정 객체의 프로퍼티**로서 동작 함. 
+
+**전역변수를 선언하면 자바스크립트 엔진은 이를 전역 객체의 프로퍼티로 할당한다**
+<hr/>
+전역공간에서는 var로 변수를 선언하는 대신 window의 프로퍼티에 직접 할당하더라도 결과적으로 var로 선언한 것과 똑같이 동장 
+
+-> 전역변수 선언과 전역 객체의 프로퍼티 할당 사이에 전혀 다른 경우 존재 
+--> '삭제'명령 
+
+변수에 delete 연산자 사용 가능 (-> window. 을생략) 
+전역변수가 곧 전역 객체의 프로퍼티 
+
+var로 선언한 전역변수와 전역객체의 프ㅗ퍼티는 호이스팅 여부 및 configuravle 여부에서 차이를 보임 
+
+#### 메서드로서 호출할 때 그 메서드 내부에서의 this
