Update 02. 명시적으로 this를 바인딩하는 방법.md

--- a/Core Java Script/03/02. 명시적으로 this를 바인딩하는 방법.md
+++ b/Core Java Script/03/02. 명시적으로 this를 바인딩하는 방법.md
@@ -1,1 +1,159 @@
+## 02. 명시적으로 this를 바인딩하는 방법 
+#### call 메서드 
+```
+Functino.prototype.call(thisArg[, arg1[, arg2[, ...]]])
+```
+call 메서드는 메서드의 호출 주체인 함수를 즉시 실행하도록 하는 명령
+call메서드는 첫번째 인자를 this로 바인딩 하고, 이후 인자들을 호출할 함수의 매개변수로 함 
 
+함수를 그냥 실행하면 this는 전역객체를 참조 <-> call 메서드를 이용하면 임의의 객체를 this로 지정할 수 있음 
+
+#### apply 메서드 
+```
+Functino.prototype.apply(thisArg[, arrgsArray]) 
+```
+apply 메서드는 call 메서드와 기능적으로 동일 
+call 메서드는 첫 번째 인자를 제외한 나머지 모든 인자들을 호출할 함수의 매개변수를 지정하는 반면, 
+apply 메서드는 두 번째 인자를 배열로 받아 그 배열의 요소들을 호출할 함수의 매개변수로 지정함 
+
+#### call / apply 메서드의 활용
+**유사배열객체(array-like object)에 배열 메서드를 적용**
+```
+var obj = {
+	0: 'a',
+    1: 'b', 
+    2: 'c',
+    length: 3
+};
+Array.prototype.push.call(obj, 'd');
+console.log(obj); 
+
+var arr = Array.prototype.slice.call(obj);
+console.log(arr);
+```
+객체에는 배열 메서드를 직접 적용 X 
+**키가 0 또는 양의 정수인 프로퍼티가 존재하고** lenght **프로퍼티의 값이 0또는 양의 정수**인 객체 
+(= 배여릐 구조와 유사한 객체(유사배열객체))경우 
+call or apply 메서드를 이용해 배열 메서드를 차용할 수 있음. 
+<hr/>
+
+**생성자 내부에서 다른 생성자를 호출**
+생성자 내부에 다른 생성자와 공통된 내용이 있을 경우 call 또는 apply를 이용해 다른 생성자를 호출하면 간단하게 반복을 줄일 수 있음 
+```
+function Person(name, gender) { 
+	this.name = name;
+    this.gender = gender; 
+}
+function Student(name, gender, school) { 
+	Person.call(this, name, gender); 
+    this.school = school;
+}
+function Employee(name, gender, company) { 
+	Person.apply(this, [name, gender]);
+    this.company = company; 
+}
+var by = new Student('보영', 'female', '단국대');
+var jn = new Employee('재난', 'male', '구골');
+```
+
+**여러 인수를 묶어 하나의 배열로 전달하고 싶을 때 - apply 활용** 
+여러개의 인수를 받는 메서드를 하나의 배열로 인수들을 전달하고 싶을 때 apply 메서드를 사용하면 좋음
+
+call/apply 메서드는 명시적으로 별도의 this를 바인딩하면서 함수 또는 메서드를 실행하는 훌륭한 방법이지만
+이로 인해 this를 예측하기 어렵게 만들어 코드 해석을 방해한다는 단점 존재 
+
+#### bind 메서드 
+```
+Function.prototype.bind(thisArg[, arg1[, arg2p, ... ]]])
+```
+
+bind메서드는 ES5에서 추가된 기능, call과 비슷하지만 즉시 호출하지 않고 넘겨 받은 this 및 인수들을 바탕으로 새로운 함수를 반환하기만 함 
+
+다시 새로운 함수를 호출할 때 인수를 넘기면 그 인수들은 기존 bind 메서드를 호출할 때 전달했던 인수들의 뒤에 이어서 등록 됨 
+```
+var func = function (a, b, c, d) {
+	console.log(this, a, b, c, d); 
+};
+func(1, 2, 3, 4);
+
+var bindFunc1 = func.bind({ X: 1});
+bindFunc1(5, 6, 7, 8);
+
+var bindFunc2 = func.bind({ x: 1}, 4, 5);
+bindFunc2(6, 7);
+bindFunc2(8, 9);
+```
+
+**name 프로퍼티**
+bind 메서드 적용해서 만든 함수 
+- name 프로퍼티에 동사 bind의 수동태 bound가 접두사로 붙음 
+- 기존의 call이나 apply 보다 코드를 추적하기에 더 수월해짐 
+
+```
+var func = function(a, b, c, d){
+	console.log(this, a, b, c, d); 
+};
+var vindFunc = func.bind({ x: 1}, 4, 5);
+console.log(func.name);
+console.log(bindFunc.name);
+```
+
+**상위 컨텍스트의 this를 내부함수나 콜백 함수에 전달하기**
+메서드의 내부 함수에서 메서드의 this를 그대로 바라보게 하기 위한 방법 
+```
+var obj = { 
+	outer: functino() { 
+    	console.log(this); 
+        var innerFunc = function() { 
+        	console.log(this); 
+        };
+        innerFunc.call(this);
+    }
+};
+obj.outer();
+```
+```
+var obj = { 
+	outer: function() { 
+    	console.log(thiss); 
+        var innerFunc = functino () { 
+        	console.log(this); 
+        }.bind(this); 
+        innerFunc(); 
+    }
+};
+obj.outer();
+```
+콜백 함수를 인자로 받는 함수나 메서드 중 기본적으로 콜백 함수 내에서 this에 관여하는 함수 또는 메서드에 대해서도 bind 메서드를 이용하면 this 값을 사용자에 맞게 변경 가능
+
+#### 화살표 함수의 예외사항 
+함수 내부에는 this가 아예 없으며, 접근하고자 하면 스코프체인상 가장 가까운 this에 접근함. 
+
+#### 별도의 인자를 this로 받는 경우(콜백 함수 내에서 this) 
+메서드 thisArg값을 지정하면 콜백 함수 내부에서 this 값을 원하는대로 변경 가능 
+- **배열 메서드**에 많이 포진돼 있음 
+- 같은 이유로 ES6의 Set, Map 등의 메서드에도 일부 존재 
+
+*thisArg를 받는 경우 예시 - forEach 메서드* 
+```
+var report = { 
+	sum: 0, 
+    count: 0,
+    add: function() { 
+    	var args = Array.prototype.slice.call(arguments); 
+        args.forEach(functino(entry) { 
+        	this.sum += entry; 
+            ++this.count; 
+        }, this);
+    },
+    average: functino (){
+    	return this.sum / this.count;
+    }
+};
+report.add(60, 85, 95); 
+console.log(report.sum, report.count, report.average());
+```
+
+콜백함수와 함께 thisArg를 인자로 받는 메서드는 
+
+forEach, map, filter, some, every, find, findIndex, flatMap, from, forEach(Set, Map에 해당)
