--- a/Core Java Script/04/04. 콜백 함수란?.md
+++ b/Core Java Script/04/04. 콜백 함수란?.md
@@ -1,1 +1,12 @@
+## 콜백 함수란? 
+콜백 함수(callback function)
+: 다른 코드의 인자로 넘겨주는 함수 
+- **제어권**과 관련이 깊음 
 
+특정 조건일 때 함수 Y를 실행해서 나에게 알려다라는 요청을 보냄 
+이 요청을 받은 함수 X 입장, 해당 조건이 갖춰졌는지 여부를 스스로 판단 및 Y 호출
+
+콜백 함수는 다른 코드(함수 또는 메서드)에게 인자를 넘겨줌 
+-> 그 제어권도 함께 위임한 함수 
+
+콜백 함수를 위임받은 코드는 자체적 내부 로직에 의해 콜백 함수 적절한 시점에 실행함
