--- a/Core Java Script/04/02. 제어권.md
+++ b/Core Java Script/04/02. 제어권.md
@@ -1,1 +1,61 @@
+## 02. 제어권 
+#### 호출 시점 
+```
+var count = 0;
+var timer = setInterval(function () { 
+	console.log(count); 
+    if (++count > 4) clearInterval(timer); 
+}, 300);
+```
+**setInterval의 구조**
+```
+var intervalID = scope.setInterval(func, delay[, param1, param2, ...]);
+```
 
+scope에 window 객체 또는 Worker의 인스턴스가 들어 올 수 O 
+(두 객체 모두 setInterval메서드를 제공하기 땜) 
+일반적인 브라우저 환경에서 window를 생량해서 함수러처럼 사용 가능 
+
+![](https://velog.velcdn.com/images/whywwhy/post/9d7b0429-445e-4f6a-b3b1-31d495761080/image.png)
+
+#### 인자 
+```
+var newArr = [10, 20, 30].map(function(currentValue, index) { 
+	console.log(currentValue, index); 
+    return currentValue + 5; 
+}); 
+console.log(newArr);
+``` 
+
+```
+Array.prototype.map(callback[, thisArg]) 
+callback: function(currentValue, index, array)
+```
+
+map메서드는 첫번쨰 인자로 callback 함수를 받고, 생략 가능한 두번째 인자로 콜백 함수 내부에서 this로 인식할 대상을 특정 할 수 있음 
+* thisArg를 생략할 경우에 일반적인 함수와 마찬가지로 전역 객체가 바인딩 됨 
+
+map메서드는 메서드의 대상이 되는 배열의 모든 요소들을 처음부터 끝까지 하나씩 꺼내 콜백 함수 반복 호출, 새로운 배열 만듦 
+
+****
+map 메서드를 호출해서 원하는 배열을 얻으려면 map메서드에 정의된 규칙에 따라 함수를 작성해야 함.
+map 메서드에 정의된 규칙에는 콜백 함수의 인자로 넘어올 값들 및 그 순서도 포함되어 있음 
+
+콜백 함수의 제어권을 넘겨받을 코드는 콜백 함수를 호출할 때 인자에 어떤 값들을 어떤 순서로 넘길 것인지에 대한 제어권을 가짐 
+
+#### this 
+콜백 함수도 함수이기에 기본적으로는 this가 전역객체를 참조하지만, 제어권을 넘겨받을 코드에서 콜백 함수에 별도록 this가 될 대상을 지정한 경우에 그 대상을 참조하게 됨 
+
+```
+Array.prototype.map = functino(callback, thisArg) { 
+	var mappedArr = []; 
+    for (var i = 0; i < this.length; i++) { 
+    	var mappedValue = callback.call(thisArg || window, this[i], i, this); 
+        mappedArr[i] = mappedValue; 
+    }
+    return mappedArr; 
+};
+```
+변수 mappedValue에 담겨 mappedArr의 i번째 인자에 할당 됨 
+
+제어권을 넘겨받을 코드에서 call/apply 메서드의 첫 번째 인자에 콜백 함수 내부에서의 this 가 될 대상을 명ㅇ시적으로 바인딩
